@@ -1,0 +1,27 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/*
+ * soup-method.c: declarations of _SOUP_METHOD_* variables
+ *
+ * Copyright (C) 2008 Red Hat, Inc.
+ */
+
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
+const char *_SOUP_METHOD_CONNECT;
+const char *_SOUP_METHOD_COPY;
+const char *_SOUP_METHOD_DELETE;
+const char *_SOUP_METHOD_GET;
+const char *_SOUP_METHOD_HEAD;
+const char *_SOUP_METHOD_LOCK;
+const char *_SOUP_METHOD_MKCOL;
+const char *_SOUP_METHOD_MOVE;
+const char *_SOUP_METHOD_OPTIONS;
+const char *_SOUP_METHOD_PATCH;
+const char *_SOUP_METHOD_POST;
+const char *_SOUP_METHOD_PROPFIND;
+const char *_SOUP_METHOD_PROPPATCH;
+const char *_SOUP_METHOD_PUT;
+const char *_SOUP_METHOD_TRACE;
+const char *_SOUP_METHOD_UNLOCK;
